--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -202,3 +202,49 @@ body {
 .hg-full{
   height: 100%;
 }
+
+// 边距
+@for $i from 0 through 200 {
+  .mr#{$i * 5} {
+    margin-right: $i * 5px !important;
+  }
+
+  .ml#{$i * 5} {
+    margin-left: $i * 5px !important;
+  }
+
+  .mt#{$i * 5} {
+    margin-top: $i * 5px !important;
+  }
+
+  .mb#{$i * 5} {
+    margin-bottom: $i * 5px !important;
+  }
+
+  .mg#{$i * 5} {
+    margin: $i * 5px !important;
+  }
+
+  .pr#{$i * 5} {
+    padding-right: $i * 5px !important;
+  }
+
+  .pl#{$i * 5} {
+    padding-left: $i * 5px !important;
+  }
+
+  .pt#{$i * 5} {
+    padding-top: $i * 5px !important;
+  }
+
+  .pb#{$i * 5} {
+    padding-bottom: $i * 5px !important;
+  }
+
+  .pd#{$i*5} {
+    padding: $i * 5px !important;
+  }
+  .ppl#{$i} {
+    padding-left: $i * 10px !important;
+  }
+}
